code/y.output
Terminals which are not used

   KW_MORPH
   KW_FORGE
   GROUP
   RING
   FIELD
   SPACE


Grammar

    0 $accept: P $end

    1 P: statements
    2  | P function
    3  | P struct
    4  | P enum

    5 statements: statement statements
    6           | epsilon

    7 statement: declaration ';'
    8          | assignment ';'
    9          | call_stmt_standalone
   10          | return_stmt ';'
   11          | if_else_conditional
   12          | switch_case
   13          | loop_stmt
   14          | KW_PRINT '(' pass_param_list ')' ';'
   15          | KW_BREAK ';'
   16          | KW_CONTINUE ';'
   17          | archetype_claim

   18 body: '{' statements '}'

   19 var: IDENT
   20    | var '.' IDENT
   21    | IDENT VARIANT IDENT

   22 field_data_type: /* empty */
   23                | KW_BIG_RATIONAL
   24                | KW_COMPLEX

   25 group_data_type: KW_CYCLIC '<' LIT_INT '>'
   26                | KW_SYMMETRIC '<' LIT_INT '>'
   27                | KW_ALTERNATING '<' LIT_INT '>'
   28                | KW_DIHEDRAL '<' LIT_INT '>'
   29                | KW_INV_MAT '<' LIT_INT ',' IDENT '>'

   30 ring_data_type: KW_BIGINT
   31               | KW_MATRIX '<' LIT_INT ',' IDENT '>'
   32               | KW_POLYNOMIAL '<' IDENT '>'

   33 space_data_type: KW_VEC '<' IDENT '>'
   34                | KW_VEC '<' PRIMITIVE_DTYPE '>'

   35 declaration: KW_LET decl_tail

   36 decl_tail: typ_var decl_cntd

   37 type: PRIMITIVE_DTYPE
   38     | KW_BUF '<' PRIMITIVE_DTYPE '>'
   39     | IDENT
   40     | group_data_type
   41     | ring_data_type
   42     | field_data_type
   43     | space_data_type

   44 decl_cntd: '=' expression
   45          | ',' decl_tail
   46          | epsilon

   47 assignment: var '=' expression
   48           | array_access '=' expression

   49 constant: LIT_CHAR
   50         | LIT_FLOAT
   51         | LIT_INT
   52         | LIT_STR

   53 expression: expression '+' expression
   54           | expression '-' expression
   55           | expression '*' expression
   56           | expression '/' expression
   57           | expression '%' expression
   58           | '(' expression ')'
   59           | expression log_op expression
   60           | '!' expression
   61           | expression rel_op expression
   62           | expression '>' expression
   63           | expression '<' expression
   64           | var
   65           | constant
   66           | unary_operation
   67           | array_access
   68           | call_stmt
   69           | KW_TRUE
   70           | KW_FALSE
   71           | expression '@' expression
   72           | array_decl

   73 return_stmt: KW_RETURN expression

   74 call_stmt_standalone: var '(' pass_param_list ')' ';'
   75                     | var '(' ')' ';'

   76 call_stmt: var '(' pass_param_list ')'
   77          | var '(' ')'

   78 pass_param_list: expression ',' pass_param_list
   79                | expression

   80 unary_operation: var INCR
   81                | var DECR

   82 array_access: var C

   83 C: '[' LIT_INT ']' C
   84  | '[' LIT_INT ']'

   85 array_decl: '[' array_list ']'

   86 array_list: constant ',' array_list
   87           | constant

   88 if_else_conditional: KW_IF '(' expression ')' if_body

   89 if_body: body
   90        | body KW_ELSE if_else_conditional
   91        | body KW_ELSE body

   92 loop_stmt: KW_WHILE '(' expression ')' body
   93          | KW_FOR '(' assignment ';' expression ';' V ')' body
   94          | KW_FOR '(' declaration ';' expression ';' V ')' body
   95          | KW_FOR IDENT KW_IN IDENT body

   96 V: unary_operation
   97  | epsilon

   98 switch_case: KW_SWITCH '(' expression ')' '{' switch_case_blocks KW_DEFAULT ':' statements '}'
   99            | KW_SWITCH '(' expression ')' '{' switch_case_blocks '}'

  100 switch_case_blocks: KW_CASE LIT_CHAR ':' statements switch_case_blocks
  101                   | KW_CASE LIT_INT ':' statements switch_case_blocks
  102                   | KW_CASE LIT_FLOAT ':' statements switch_case_blocks
  103                   | epsilon

  104 archetype_claim: KW_CLAIM IDENT KW_IS KW_GROUP '{' group_closure_rule identity_rule group_inverse_rule '}' ';'
  105                | KW_CLAIM IDENT KW_IS KW_RING '{' ring_closure_rule identity_rule '}' ';'
  106                | KW_CLAIM IDENT KW_IS KW_FIELD '{' field_inverse_rule '}' ';'
  107                | KW_CLAIM IDENT KW_IS KW_SPACE '{' KW_FIELD '=' '(' IDENT ')' ';' group_closure_rule group_inverse_rule identity_rule ring_closure_rule '}' ';'

  108 group_closure_rule: '(' IDENT '=' IDENT '+' IDENT ')' ARROW body

  109 ring_closure_rule: '(' IDENT '=' IDENT '*' IDENT ')' ARROW body

  110 identity_rule: '(' IDENT '=' LIT_INT ')' ARROW body

  111 group_inverse_rule: '(' IDENT '=' '-' IDENT ')' ARROW body

  112 field_inverse_rule: '(' IDENT '=' '~' IDENT ')' ARROW body

  113 function: function_header '{' function_body '}'

  114 function_header: KW_FN IDENT '(' parameter_list ')' ':' type

  115 function_body: statements

  116 parameter_list: typ_var
  117               | parameter_list ',' typ_var

  118 typ_var: var ':' type

  119 struct: KW_STRUCT IDENT '{' attr_list '}'

  120 attr_list: IDENT
  121          | typ_var ',' IDENT

  122 enum: KW_ENUM IDENT '{' variant_list '}'

  123 variant_list: IDENT
  124             | variant_list ',' IDENT

  125 epsilon: /* empty */


Terminals, with rules where they appear

$end (0) 0
'!' (33) 60
'%' (37) 57
'(' (40) 14 58 74 75 76 77 88 92 93 94 98 99 107 108 109 110 111 112
    114
')' (41) 14 58 74 75 76 77 88 92 93 94 98 99 107 108 109 110 111 112
    114
'*' (42) 55 109
'+' (43) 53 108
',' (44) 29 31 45 78 86 117 121 124
'-' (45) 54 111
'.' (46) 20
'/' (47) 56
':' (58) 98 100 101 102 114 118
';' (59) 7 8 10 14 15 16 74 75 93 94 104 105 106 107
'<' (60) 25 26 27 28 29 31 32 33 34 38 63
'=' (61) 44 47 48 107 108 109 110 111 112
'>' (62) 25 26 27 28 29 31 32 33 34 38 62
'@' (64) 71
'[' (91) 83 84 85
']' (93) 83 84 85
'{' (123) 18 98 99 104 105 106 107 113 119 122
'}' (125) 18 98 99 104 105 106 107 113 119 122
'~' (126) 112
error (256)
KW_CLAIM (258) 104 105 106 107
KW_IS (259) 104 105 106 107
KW_GROUP (260) 104
KW_RING (261) 105
KW_FIELD (262) 106 107
KW_SPACE (263) 107
KW_PRINT (264) 14
KW_LET (265) 35
KW_RETURN (266) 73
KW_IF (267) 88
KW_ELSE (268) 90 91
KW_WHILE (269) 92
KW_FOR (270) 93 94 95
KW_IN (271) 95
KW_SWITCH (272) 98 99
KW_CASE (273) 100 101 102
KW_DEFAULT (274) 98
KW_BREAK (275) 15
KW_CONTINUE (276) 16
KW_FN (277) 114
KW_MORPH (278)
KW_FORGE (279)
KW_STRUCT (280) 119
KW_ENUM (281) 122
KW_CYCLIC (282) 25
KW_BIG_RATIONAL (283) 23
KW_COMPLEX (284) 24
KW_SYMMETRIC (285) 26
KW_ALTERNATING (286) 27
KW_DIHEDRAL (287) 28
KW_INV_MAT (288) 29
KW_BIGINT (289) 30
KW_MATRIX (290) 31
KW_POLYNOMIAL (291) 32
KW_VEC (292) 33 34
KW_BUF (293) 38
IDENT (294) 19 20 21 29 31 32 33 39 95 104 105 106 107 108 109 110
    111 112 114 119 120 121 122 123 124
PRIMITIVE_DTYPE (295) 34 37 38
LIT_INT (296) 25 26 27 28 29 31 51 83 84 101 110
LIT_FLOAT (297) 50 102
LIT_STR (298) 52
LIT_CHAR (299) 49 100
log_op (300) 59
rel_op (301) 61
KW_TRUE (302) 69
KW_FALSE (303) 70
GROUP (304)
RING (305)
FIELD (306)
SPACE (307)
INCR (308) 80
DECR (309) 81
ARROW (310) 108 109 110 111 112
VARIANT (311) 21


Nonterminals, with rules where they appear

$accept (78)
    on left: 0
P (79)
    on left: 1 2 3 4, on right: 0 2 3 4
statements (80)
    on left: 5 6, on right: 1 5 18 98 100 101 102 115
statement (81)
    on left: 7 8 9 10 11 12 13 14 15 16 17, on right: 5
body (82)
    on left: 18, on right: 89 90 91 92 93 94 95 108 109 110 111 112
var (83)
    on left: 19 20 21, on right: 20 47 64 74 75 76 77 80 81 82 118
field_data_type (84)
    on left: 22 23 24, on right: 42
group_data_type (85)
    on left: 25 26 27 28 29, on right: 40
ring_data_type (86)
    on left: 30 31 32, on right: 41
space_data_type (87)
    on left: 33 34, on right: 43
declaration (88)
    on left: 35, on right: 7 94
decl_tail (89)
    on left: 36, on right: 35 45
type (90)
    on left: 37 38 39 40 41 42 43, on right: 114 118
decl_cntd (91)
    on left: 44 45 46, on right: 36
assignment (92)
    on left: 47 48, on right: 8 93
constant (93)
    on left: 49 50 51 52, on right: 65 86 87
expression (94)
    on left: 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70
    71 72, on right: 44 47 48 53 54 55 56 57 58 59 60 61 62 63 71 73
    78 79 88 92 93 94 98 99
return_stmt (95)
    on left: 73, on right: 10
call_stmt_standalone (96)
    on left: 74 75, on right: 9
call_stmt (97)
    on left: 76 77, on right: 68
pass_param_list (98)
    on left: 78 79, on right: 14 74 76 78
unary_operation (99)
    on left: 80 81, on right: 66 96
array_access (100)
    on left: 82, on right: 48 67
C (101)
    on left: 83 84, on right: 82 83
array_decl (102)
    on left: 85, on right: 72
array_list (103)
    on left: 86 87, on right: 85 86
if_else_conditional (104)
    on left: 88, on right: 11 90
if_body (105)
    on left: 89 90 91, on right: 88
loop_stmt (106)
    on left: 92 93 94 95, on right: 13
V (107)
    on left: 96 97, on right: 93 94
switch_case (108)
    on left: 98 99, on right: 12
switch_case_blocks (109)
    on left: 100 101 102 103, on right: 98 99 100 101 102
archetype_claim (110)
    on left: 104 105 106 107, on right: 17
group_closure_rule (111)
    on left: 108, on right: 104 107
ring_closure_rule (112)
    on left: 109, on right: 105 107
identity_rule (113)
    on left: 110, on right: 104 105 107
group_inverse_rule (114)
    on left: 111, on right: 104 107
field_inverse_rule (115)
    on left: 112, on right: 106
function (116)
    on left: 113, on right: 2
function_header (117)
    on left: 114, on right: 113
function_body (118)
    on left: 115, on right: 113
parameter_list (119)
    on left: 116 117, on right: 114 117
typ_var (120)
    on left: 118, on right: 36 116 117 121
struct (121)
    on left: 119, on right: 3
attr_list (122)
    on left: 120 121, on right: 119
enum (123)
    on left: 122, on right: 4
variant_list (124)
    on left: 123 124, on right: 122 124
epsilon (125)
    on left: 125, on right: 6 46 97 103


state 0

    0 $accept: . P $end

    KW_CLAIM     shift, and go to state 1
    KW_PRINT     shift, and go to state 2
    KW_LET       shift, and go to state 3
    KW_RETURN    shift, and go to state 4
    KW_IF        shift, and go to state 5
    KW_WHILE     shift, and go to state 6
    KW_FOR       shift, and go to state 7
    KW_SWITCH    shift, and go to state 8
    KW_BREAK     shift, and go to state 9
    KW_CONTINUE  shift, and go to state 10
    IDENT        shift, and go to state 11

    $default  reduce using rule 125 (epsilon)

    P                     go to state 12
    statements            go to state 13
    statement             go to state 14
    var                   go to state 15
    declaration           go to state 16
    assignment            go to state 17
    return_stmt           go to state 18
    call_stmt_standalone  go to state 19
    array_access          go to state 20
    if_else_conditional   go to state 21
    loop_stmt             go to state 22
    switch_case           go to state 23
    archetype_claim       go to state 24
    epsilon               go to state 25


state 1

  104 archetype_claim: KW_CLAIM . IDENT KW_IS KW_GROUP '{' group_closure_rule identity_rule group_inverse_rule '}' ';'
  105                | KW_CLAIM . IDENT KW_IS KW_RING '{' ring_closure_rule identity_rule '}' ';'
  106                | KW_CLAIM . IDENT KW_IS KW_FIELD '{' field_inverse_rule '}' ';'
  107                | KW_CLAIM . IDENT KW_IS KW_SPACE '{' KW_FIELD '=' '(' IDENT ')' ';' group_closure_rule group_inverse_rule identity_rule ring_closure_rule '}' ';'

    IDENT  shift, and go to state 26


state 2

   14 statement: KW_PRINT . '(' pass_param_list ')' ';'

    '('  shift, and go to state 27


state 3

   35 declaration: KW_LET . decl_tail

    IDENT  shift, and go to state 11

    var        go to state 28
    decl_tail  go to state 29
    typ_var    go to state 30


state 4

   73 return_stmt: KW_RETURN . expression

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 42
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 5

   88 if_else_conditional: KW_IF . '(' expression ')' if_body

    '('  shift, and go to state 47


state 6

   92 loop_stmt: KW_WHILE . '(' expression ')' body

    '('  shift, and go to state 48


state 7

   93 loop_stmt: KW_FOR . '(' assignment ';' expression ';' V ')' body
   94          | KW_FOR . '(' declaration ';' expression ';' V ')' body
   95          | KW_FOR . IDENT KW_IN IDENT body

    IDENT  shift, and go to state 49
    '('    shift, and go to state 50


state 8

   98 switch_case: KW_SWITCH . '(' expression ')' '{' switch_case_blocks KW_DEFAULT ':' statements '}'
   99            | KW_SWITCH . '(' expression ')' '{' switch_case_blocks '}'

    '('  shift, and go to state 51


state 9

   15 statement: KW_BREAK . ';'

    ';'  shift, and go to state 52


state 10

   16 statement: KW_CONTINUE . ';'

    ';'  shift, and go to state 53


state 11

   19 var: IDENT .
   21    | IDENT . VARIANT IDENT

    VARIANT  shift, and go to state 54

    $default  reduce using rule 19 (var)


state 12

    0 $accept: P . $end
    2 P: P . function
    3  | P . struct
    4  | P . enum

    $end       shift, and go to state 55
    KW_FN      shift, and go to state 56
    KW_STRUCT  shift, and go to state 57
    KW_ENUM    shift, and go to state 58

    function         go to state 59
    function_header  go to state 60
    struct           go to state 61
    enum             go to state 62


state 13

    1 P: statements .

    $default  reduce using rule 1 (P)


state 14

    5 statements: statement . statements

    KW_CLAIM     shift, and go to state 1
    KW_PRINT     shift, and go to state 2
    KW_LET       shift, and go to state 3
    KW_RETURN    shift, and go to state 4
    KW_IF        shift, and go to state 5
    KW_WHILE     shift, and go to state 6
    KW_FOR       shift, and go to state 7
    KW_SWITCH    shift, and go to state 8
    KW_BREAK     shift, and go to state 9
    KW_CONTINUE  shift, and go to state 10
    IDENT        shift, and go to state 11

    $default  reduce using rule 125 (epsilon)

    statements            go to state 63
    statement             go to state 14
    var                   go to state 15
    declaration           go to state 16
    assignment            go to state 17
    return_stmt           go to state 18
    call_stmt_standalone  go to state 19
    array_access          go to state 20
    if_else_conditional   go to state 21
    loop_stmt             go to state 22
    switch_case           go to state 23
    archetype_claim       go to state 24
    epsilon               go to state 25


state 15

   20 var: var . '.' IDENT
   47 assignment: var . '=' expression
   74 call_stmt_standalone: var . '(' pass_param_list ')' ';'
   75                     | var . '(' ')' ';'
   82 array_access: var . C

    '.'  shift, and go to state 64
    '('  shift, and go to state 65
    '='  shift, and go to state 66
    '['  shift, and go to state 67

    C  go to state 68


state 16

    7 statement: declaration . ';'

    ';'  shift, and go to state 69


state 17

    8 statement: assignment . ';'

    ';'  shift, and go to state 70


state 18

   10 statement: return_stmt . ';'

    ';'  shift, and go to state 71


state 19

    9 statement: call_stmt_standalone .

    $default  reduce using rule 9 (statement)


state 20

   48 assignment: array_access . '=' expression

    '='  shift, and go to state 72


state 21

   11 statement: if_else_conditional .

    $default  reduce using rule 11 (statement)


state 22

   13 statement: loop_stmt .

    $default  reduce using rule 13 (statement)


state 23

   12 statement: switch_case .

    $default  reduce using rule 12 (statement)


state 24

   17 statement: archetype_claim .

    $default  reduce using rule 17 (statement)


state 25

    6 statements: epsilon .

    $default  reduce using rule 6 (statements)


state 26

  104 archetype_claim: KW_CLAIM IDENT . KW_IS KW_GROUP '{' group_closure_rule identity_rule group_inverse_rule '}' ';'
  105                | KW_CLAIM IDENT . KW_IS KW_RING '{' ring_closure_rule identity_rule '}' ';'
  106                | KW_CLAIM IDENT . KW_IS KW_FIELD '{' field_inverse_rule '}' ';'
  107                | KW_CLAIM IDENT . KW_IS KW_SPACE '{' KW_FIELD '=' '(' IDENT ')' ';' group_closure_rule group_inverse_rule identity_rule ring_closure_rule '}' ';'

    KW_IS  shift, and go to state 73


state 27

   14 statement: KW_PRINT '(' . pass_param_list ')' ';'

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 74
    call_stmt        go to state 43
    pass_param_list  go to state 75
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 28

   20 var: var . '.' IDENT
  118 typ_var: var . ':' type

    '.'  shift, and go to state 64
    ':'  shift, and go to state 76


state 29

   35 declaration: KW_LET decl_tail .

    $default  reduce using rule 35 (declaration)


state 30

   36 decl_tail: typ_var . decl_cntd

    ','  shift, and go to state 77
    '='  shift, and go to state 78

    $default  reduce using rule 125 (epsilon)

    decl_cntd  go to state 79
    epsilon    go to state 80


state 31

   51 constant: LIT_INT .

    $default  reduce using rule 51 (constant)


state 32

   50 constant: LIT_FLOAT .

    $default  reduce using rule 50 (constant)


state 33

   52 constant: LIT_STR .

    $default  reduce using rule 52 (constant)


state 34

   49 constant: LIT_CHAR .

    $default  reduce using rule 49 (constant)


state 35

   69 expression: KW_TRUE .

    $default  reduce using rule 69 (expression)


state 36

   70 expression: KW_FALSE .

    $default  reduce using rule 70 (expression)


state 37

   60 expression: '!' . expression

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 81
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 38

   58 expression: '(' . expression ')'

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 82
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 39

   85 array_decl: '[' . array_list ']'

    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34

    constant    go to state 83
    array_list  go to state 84


state 40

   20 var: var . '.' IDENT
   64 expression: var .
   76 call_stmt: var . '(' pass_param_list ')'
   77          | var . '(' ')'
   80 unary_operation: var . INCR
   81                | var . DECR
   82 array_access: var . C

    INCR  shift, and go to state 85
    DECR  shift, and go to state 86
    '.'   shift, and go to state 64
    '('   shift, and go to state 87
    '['   shift, and go to state 67

    $default  reduce using rule 64 (expression)

    C  go to state 68


state 41

   65 expression: constant .

    $default  reduce using rule 65 (expression)


state 42

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . log_op expression
   61           | expression . rel_op expression
   62           | expression . '>' expression
   63           | expression . '<' expression
   71           | expression . '@' expression
   73 return_stmt: KW_RETURN expression .

    log_op  shift, and go to state 88
    rel_op  shift, and go to state 89
    '>'     shift, and go to state 90
    '<'     shift, and go to state 91
    '+'     shift, and go to state 92
    '-'     shift, and go to state 93
    '*'     shift, and go to state 94
    '/'     shift, and go to state 95
    '%'     shift, and go to state 96
    '@'     shift, and go to state 97

    $default  reduce using rule 73 (return_stmt)


state 43

   68 expression: call_stmt .

    $default  reduce using rule 68 (expression)


state 44

   66 expression: unary_operation .

    $default  reduce using rule 66 (expression)


state 45

   67 expression: array_access .

    $default  reduce using rule 67 (expression)


state 46

   72 expression: array_decl .

    $default  reduce using rule 72 (expression)


state 47

   88 if_else_conditional: KW_IF '(' . expression ')' if_body

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 98
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 48

   92 loop_stmt: KW_WHILE '(' . expression ')' body

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 99
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 49

   95 loop_stmt: KW_FOR IDENT . KW_IN IDENT body

    KW_IN  shift, and go to state 100


state 50

   93 loop_stmt: KW_FOR '(' . assignment ';' expression ';' V ')' body
   94          | KW_FOR '(' . declaration ';' expression ';' V ')' body

    KW_LET  shift, and go to state 3
    IDENT   shift, and go to state 11

    var           go to state 101
    declaration   go to state 102
    assignment    go to state 103
    array_access  go to state 20


state 51

   98 switch_case: KW_SWITCH '(' . expression ')' '{' switch_case_blocks KW_DEFAULT ':' statements '}'
   99            | KW_SWITCH '(' . expression ')' '{' switch_case_blocks '}'

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 104
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 52

   15 statement: KW_BREAK ';' .

    $default  reduce using rule 15 (statement)


state 53

   16 statement: KW_CONTINUE ';' .

    $default  reduce using rule 16 (statement)


state 54

   21 var: IDENT VARIANT . IDENT

    IDENT  shift, and go to state 105


state 55

    0 $accept: P $end .

    $default  accept


state 56

  114 function_header: KW_FN . IDENT '(' parameter_list ')' ':' type

    IDENT  shift, and go to state 106


state 57

  119 struct: KW_STRUCT . IDENT '{' attr_list '}'

    IDENT  shift, and go to state 107


state 58

  122 enum: KW_ENUM . IDENT '{' variant_list '}'

    IDENT  shift, and go to state 108


state 59

    2 P: P function .

    $default  reduce using rule 2 (P)


state 60

  113 function: function_header . '{' function_body '}'

    '{'  shift, and go to state 109


state 61

    3 P: P struct .

    $default  reduce using rule 3 (P)


state 62

    4 P: P enum .

    $default  reduce using rule 4 (P)


state 63

    5 statements: statement statements .

    $default  reduce using rule 5 (statements)


state 64

   20 var: var '.' . IDENT

    IDENT  shift, and go to state 110


state 65

   74 call_stmt_standalone: var '(' . pass_param_list ')' ';'
   75                     | var '(' . ')' ';'

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    ')'        shift, and go to state 111
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 74
    call_stmt        go to state 43
    pass_param_list  go to state 112
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 66

   47 assignment: var '=' . expression

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 113
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 67

   83 C: '[' . LIT_INT ']' C
   84  | '[' . LIT_INT ']'

    LIT_INT  shift, and go to state 114


state 68

   82 array_access: var C .

    $default  reduce using rule 82 (array_access)


state 69

    7 statement: declaration ';' .

    $default  reduce using rule 7 (statement)


state 70

    8 statement: assignment ';' .

    $default  reduce using rule 8 (statement)


state 71

   10 statement: return_stmt ';' .

    $default  reduce using rule 10 (statement)


state 72

   48 assignment: array_access '=' . expression

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 115
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 73

  104 archetype_claim: KW_CLAIM IDENT KW_IS . KW_GROUP '{' group_closure_rule identity_rule group_inverse_rule '}' ';'
  105                | KW_CLAIM IDENT KW_IS . KW_RING '{' ring_closure_rule identity_rule '}' ';'
  106                | KW_CLAIM IDENT KW_IS . KW_FIELD '{' field_inverse_rule '}' ';'
  107                | KW_CLAIM IDENT KW_IS . KW_SPACE '{' KW_FIELD '=' '(' IDENT ')' ';' group_closure_rule group_inverse_rule identity_rule ring_closure_rule '}' ';'

    KW_GROUP  shift, and go to state 116
    KW_RING   shift, and go to state 117
    KW_FIELD  shift, and go to state 118
    KW_SPACE  shift, and go to state 119


state 74

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . log_op expression
   61           | expression . rel_op expression
   62           | expression . '>' expression
   63           | expression . '<' expression
   71           | expression . '@' expression
   78 pass_param_list: expression . ',' pass_param_list
   79                | expression .

    log_op  shift, and go to state 88
    rel_op  shift, and go to state 89
    '>'     shift, and go to state 90
    '<'     shift, and go to state 91
    '+'     shift, and go to state 92
    '-'     shift, and go to state 93
    '*'     shift, and go to state 94
    '/'     shift, and go to state 95
    '%'     shift, and go to state 96
    '@'     shift, and go to state 97
    ','     shift, and go to state 120

    $default  reduce using rule 79 (pass_param_list)


state 75

   14 statement: KW_PRINT '(' pass_param_list . ')' ';'

    ')'  shift, and go to state 121


state 76

  118 typ_var: var ':' . type

    KW_CYCLIC        shift, and go to state 122
    KW_BIG_RATIONAL  shift, and go to state 123
    KW_COMPLEX       shift, and go to state 124
    KW_SYMMETRIC     shift, and go to state 125
    KW_ALTERNATING   shift, and go to state 126
    KW_DIHEDRAL      shift, and go to state 127
    KW_INV_MAT       shift, and go to state 128
    KW_BIGINT        shift, and go to state 129
    KW_MATRIX        shift, and go to state 130
    KW_POLYNOMIAL    shift, and go to state 131
    KW_VEC           shift, and go to state 132
    KW_BUF           shift, and go to state 133
    IDENT            shift, and go to state 134
    PRIMITIVE_DTYPE  shift, and go to state 135

    $default  reduce using rule 22 (field_data_type)

    field_data_type  go to state 136
    group_data_type  go to state 137
    ring_data_type   go to state 138
    space_data_type  go to state 139
    type             go to state 140


state 77

   45 decl_cntd: ',' . decl_tail

    IDENT  shift, and go to state 11

    var        go to state 28
    decl_tail  go to state 141
    typ_var    go to state 30


state 78

   44 decl_cntd: '=' . expression

    IDENT      shift, and go to state 11
    LIT_INT    shift, and go to state 31
    LIT_FLOAT  shift, and go to state 32
    LIT_STR    shift, and go to state 33
    LIT_CHAR   shift, and go to state 34
    KW_TRUE    shift, and go to state 35
    KW_FALSE   shift, and go to state 36
    '!'        shift, and go to state 37
    '('        shift, and go to state 38
    '['        shift, and go to state 39

    var              go to state 40
    constant         go to state 41
    expression       go to state 142
    call_stmt        go to state 43
    unary_operation  go to state 44
    array_access     go to state 45
    array_decl       go to state 46


state 79

   36 decl_tail: typ_var decl_cntd .

    $default  reduce using rule 36 (decl_tail)


state 80

   46 decl_cntd: epsilon .

    $default  reduce using rule 46 (decl_cntd)


state 81

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   59           | expression . log_op expression
   60           | '!' expression .
   61           | expression . rel_op expression
   62           | expression . '>' expression
   63           | expression . '<' expression
   71           | expression . '@' expression

    $default  reduce using rule 60 (expression)


state 82

   53 expression: expression . '+' expression
   54           | expression . '-' expression
   55           | expression . '*' expression
   56           | expression . '/' expression
   57           | expression . '%' expression
   58           | '(' expression . ')'
   59           | expression . log_op expression
   61           | expression . rel_op expression
   62           | expression . '>' expression
   63           | expression . '<' expression
   71           | expression . '@' expression
